backends/x11: Destroy GLRenderTimeQuery while ctx is valid

BUG: 473707