src/backends/x11/standalone/x11_standalone_egl_backend.cpp
@@ -82,6 +82,8 @@ EglBackend::~EglBackend()
     // if the render backend is about to be destroyed.
     RenderLoopPrivate::get(m_backend->renderLoop())->invalidate();
 
+    m_query.reset();
+
     if (isFailed() && m_overlayWindow) {
         m_overlayWindow->destroy();
     }
